...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    android:id="@+id/activity_login"
    tools:context=".login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLoginActivity"
        android:layout_width="0dp"
        android:layout_height="58dp"
...
        app:layout_constraintEnd_toEndOf="@+id/editTextLoginUserName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginUserName" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondaryDarkColor"
        android:text="@string/login_button"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/textViewLoginErrorMessage"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/textViewLoginErrorMessage"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginErrorMessage" />

    <TextView
        android:id="@+id/textLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/register_message_login_screen"
        android:textColor="@color/primaryTextColor"
...
        android:layout_height="130dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGuestAccess"
        app:layout_constraintVertical_bias="0.636"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewLoginErrorMessage"
        android:layout_width="wrap_content"
...
        android:layout_marginTop="24dp"
        android:textColor="#E40E0E"
        app:layout_constraintEnd_toEndOf="@+id/editTextLoginPassword"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword"
        tools:text="Usuario y/o contraseña incorrectos" />

    <TextView
        android:id="@+id/textViewGuestAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
...
