<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_project"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    android:paddingHorizontal="0dp"
    tools:context=".projectDetail.ProjectContentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarProjectDetailActivity"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="@color/secondaryDarkColor"
        android:backgroundTint="@color/secondaryDarkColor"
        android:foregroundTint="@color/secondaryTextColor"
        android:minHeight="?attr/actionBarSize"
...
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddFavouriteItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDetailContent"
        app:layout_constraintVertical_bias="0.203"
        tools:ignore="SpeakableTextPresentCheck">
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDescriptionDetailProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:foregroundGravity="center"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="TextView"
                android:textSize="20sp"
                tools:text="DESCRIPCIÓN: Combinación de estilos como Rock and Roll y Jazz para crear un disco único que disfrutarás del principio hasta el final ¡ No pierdas la oportunidad de apoyar el proyecto y recibir una copia única!" />

            <TextView
                android:id="@+id/textViewDateAndHourDetailProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:paddingHorizontal="5dp"
...
        android:id="@+id/buttonAddFavouriteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/secondaryDarkColor"
        android:text="@string/NotFavouriteButton"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDetailContent"
        app:layout_constraintVertical_bias="1.0" />
...
