...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    android:id="@+id/activity_register"
    tools:context=".register.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarRegisterActivity"
        android:layout_width="414dp"
        android:layout_height="77dp"
...
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterUserName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterUserName" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/secondaryDarkColor"
        android:text="@string/register_button"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/textViewIncorrectData"
        app:layout_constraintStart_toStartOf="@+id/textViewIncorrectData"
        app:layout_constraintTop_toBottomOf="@+id/textViewIncorrectData" />

    <TextView
        android:id="@+id/textLoginRegisterScreen"
        android:layout_width="wrap_content"
...
