<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_project_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:foregroundTint="@color/secondaryTextColor"
    android:foregroundTintMode="src_in"
    tools:context=".projectList.ProjectListActivity">
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTint="@color/secondaryTextColor"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include
            layout="@layout/project_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp" />
    </FrameLayout>


...
